# workspace is required to vendor crates for all packages.
[workspace]
members = [
    "BLAKE3",
    "skim",
    "prql",
]
resolver = "2"

# FIXME: even though the profiles should be defined in the main cargo config we
# cannot do this yet, since we compile each package separatelly, so you should
# ignore warning from cargo about this.
